Update Blog “2020-02-14-szechy-bb-3”

--- a/src/pages/blog/2020-02-14-szechy-bb-3.md
+++ b/src/pages/blog/2020-02-14-szechy-bb-3.md
@@ -8,6 +8,8 @@ featuredimage: /img/01f2663ae6c54c9e079a57df4130ab67c7c25b7812.jpg
 tags:
   - losers study szechuan pool
 ---
+![Image of us at Restaurant](/img/01f2663ae6c54c9e079a57df4130ab67c7c25b7812.jpg)
+
 #### January 19th, 2020
 
 A day unlike our usual weekend hangouts couped up in my room/Daly City.
