Update Blog “2020-02-14-szechy-bb-3”

--- a/src/pages/blog/2020-02-14-szechy-bb-3.md
+++ b/src/pages/blog/2020-02-14-szechy-bb-3.md
@@ -6,7 +6,10 @@ description: Look at how destroyed we look HAHAHA
 featuredpost: true
 featuredimage: /img/01f2663ae6c54c9e079a57df4130ab67c7c25b7812.jpg
 tags:
-  - losers study szechuan pool
+  - losers
+  - study
+  - szechuan
+  - pool
 ---
 ![Image of us at Restaurant](/img/01f2663ae6c54c9e079a57df4130ab67c7c25b7812.jpg)
 
